--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,11 @@
 
 @import "components/status-bar.css";
 
+@import "screens/login.css";
+
+@import "variables.css";
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 @font-face {
     font-family: 'WT Jazz Exp';
     src: url('WTJazz-BoldExpanded.eot');
@@ -16,57 +21,9 @@
 }
 
 body{
-    background-color: #008080;
+    background-color: black;
     font-family: 'WT Jazz Exp';
     font-weight: bold;
     font-style: normal;
     height: 150vh;
-}
-
-.LogIn-mention{
-    text-align: center;
-    margin-top: 135px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-.LogIn-mention h1{
-    font-size:x-large;
-}
-.LogIn-mention p{
-    margin-top: 30px;
-    width: 60%;
-    opacity: 0.7;
-}
-
-.logIn{
-    margin-top: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.logIn input:first-child{
-    width: 400px;
-    height: 40px;
-    font-size: 22px;
-    border-radius: 10px;
-}
-
-.logIn input:nth-child(2){
-    width: 400px;
-    height: 40px;
-    margin-top: 10px;
-    font-size: 22px;
-    border-radius: 10px;
-}
-.player{
-    right: 0;
-    position: fixed;
-    margin-top: 100px;
-}
-.player:first-child{
-    right: 1;
 }
