--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,11 @@
     font-display: swap;
 }
 
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 body{
     background-color: black;
     font-family: 'WT Jazz Exp';
@@ -46,31 +51,38 @@ body{
 .menu-top > h1{
     font-size: xx-large;
     margin-left: 10px;
-    width: 55%;
+    width: 52%;
     padding-left: 5px;
 }
 
 .menu-top .selectors{
     margin: 5px;
-    width: 45%;
+    width: 42%;
 }
 .menu-top .selectors i{
     margin: 10px;
 }
 .chats{
     height: 80vh;
-    width: 100vw;
+    width: 95vw;
     margin-top: 2vh;
 }
 .chats .chats-player{
     height: 9vh;
-    width: 100vw;
-    background-color: brown;
+    width: 98vw;
+    color: white;
     margin-bottom: .5vh;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-img{
+.chats-player--face > img{
     background-color: var(--yellow);
     border-radius: 20px;
+    margin-left: -10px;
+    margin-top: 2px;
+    border: .4vh white solid;
 }
 .sticker{
     height: 2.5vh;
@@ -82,25 +94,34 @@ img{
     align-items: center;
     justify-content: center;
     border-radius: 50%;
-}
-.chats-player{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-sizing: border-box;
+    margin-left: 40px;
 }
 .chats-player--face{
     width: 20%;
 }
 .chats-player--chat{
-    width: 60%;
+    width: 54%;
     margin-left: 10px;
 }
 .chats-player--times{
-    width: 20%;
+    width: 16%;
     display: flex;
     justify-content: flex-end;
 }
 .chats-player--time{
     font-size: small;
+    margin-top: -25px;
+    opacity: .7;
+}
+
+.chats-player--tomato:hover .chats-player--face > img{
+    border-color: tomato;
+}
+.leave{
+    opacity: .5;
+}
+.chats-player--mention{
+    margin-top: 8px;
+    font-size: small;
+    font-weight: 400;
 }
