--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
 
 @import "components/status-bar.css";
 @import "components/menu-bar.css";
+@import "components/sticker.css";
 
 @import "screens/login.css";
 @import "screens/home.css";
@@ -84,18 +85,6 @@ body{
     margin-top: 2px;
     border: .4vh white solid;
 }
-.sticker{
-    height: 2.5vh;
-    width: 2.5vh;
-    background-color:tomato;
-    color: white;
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    margin-left: 40px;
-}
 .chats-player--face{
     width: 20%;
 }
@@ -124,4 +113,21 @@ body{
     margin-top: 8px;
     font-size: small;
     font-weight: 400;
+}
+.fa-gear:hover{
+    animation: gear-turn 1s linear infinite;
+    color: var(--yellow);
+}
+.fa-music:hover,
+.fa-user-plus:hover,
+.fa-magnifying-glass:hover{
+    color: var(--yellow);
+}
+@keyframes gear-turn {
+    from{
+        transform: rotateZ(0);
+    }   
+    to{
+        transform: rotateZ(360deg);
+    } 
 }
