--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
 
 @import "screens/login.css";
 @import "screens/home.css";
+@import "screens/chats.css";
 
 @import "variables.css";
 
@@ -37,97 +38,147 @@ body{
     padding-top: 39px;
 }
 
-.menu-top{
-    margin-top: -7px;
+.chat-title{
     width: 100vw;
-    height: 7vh;
+    height: 6vh;
+    position: fixed;
+    margin-top: -10px;
     color: white;
+    background-color: black;
     display: flex;
     justify-content: center;
     align-items: center;
-
-    
+    z-index: 2;
+    opacity: .9;
 }
-
-.menu-top > h1{
-    font-size: xx-large;
-    margin-left: 10px;
-    width: 52%;
-    padding-left: 5px;
-}
-
-.menu-top .selectors{
-    margin: 5px;
-    width: 42%;
-}
-.menu-top .selectors i{
-    margin: 10px;
-}
-.chats{
-    height: 80vh;
-    width: 95vw;
-    margin-top: 2vh;
-}
-.chats .chats-player{
-    height: 9vh;
-    width: 98vw;
-    color: white;
-    margin-bottom: .5vh;
-    box-sizing: border-box;
+.chat-title--exit{
+    width: 30%;
     display: flex;
-    justify-content: center;
     align-items: center;
 }
-.chats-player--face > img{
-    background-color: var(--yellow);
-    border-radius: 20px;
-    margin-left: -10px;
-    margin-top: 2px;
-    border: .4vh white solid;
+.chat-title--exit > span{
+    font-size: 120%;
 }
-.chats-player--face{
-    width: 20%;
+.fa-chevron-left{
+    margin: 0px 10px;
 }
-.chats-player--chat{
-    width: 54%;
-    margin-left: 10px;
+.fa-chevron-left:hover,
+.fa-bars:hover{
+    color: var(--yellow);
 }
-.chats-player--times{
-    width: 16%;
+.chat-title--name{
+    width: 40%;
+    display: flex;
+    justify-content: center;
+}
+.chat-title--name > h1{
+    font-size: 130%;
+}
+.chat-title--options{
+    width: 30%;
     display: flex;
     justify-content: flex-end;
+    margin-right: 5px;
 }
-.chats-player--time{
+.chat-title--options > i {
+    margin-right: 20px;
+}
+.chat-text{
+    width: 100vw;
+    height: 80vh;
+    margin-top: 60px;
+}
+.chat-text__div{
+    width:95vw;
+    height: 8vh;
+    display: flex;
+    margin-bottom: 10px;
+}
+.chat-text__div--face{
+    width: 45px;
+    height: 45px;
+    background-color: var(--yellow);
+    margin: 7px;
+    border-radius: 15px;
+}
+.chat-text__div--face > img{
+    border-radius: 10px;
+    position: relative;
+    margin-left: 5px;
+    margin-top: 10px;
+}
+.chat-text__div--text{
+    color: white;
+}
+.chat-text__div--text > h6{
     font-size: small;
-    margin-top: -25px;
+    margin-top: 5px;
+}
+.chat-text__div--text--content{
+    width:60vw;
+    height: 4vh;
+    background-color: white;
+    margin-top: 7px;
+    border-radius: 10px;
+    border-top-left-radius: 0px;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
+.chat-text__div--text--content > span{
+    color: black;
+    margin-left: 10px;
+}
+.chat-text__div:nth-child(3) .chat-text__div--text--content{
+    width:60vw;
+    height: 6vh;
+    background-color: white;
+    margin-top: 7px;
+    border-radius: 10px;
+    border-top-left-radius: 0px;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
+.chat-text__div--time{
+    font-size: small;
+    margin-top: 50px;
+    margin-left: 5px;
+    margin-right: 5px;
+    color: white;
     opacity: .7;
 }
+.chat-text__div:nth-child(3) .chat-text__div--time{
+    margin-top: 70px;
+}
+.chat-text__div:nth-child(2){
+    flex-direction: row-reverse;
+}
 
-.chats-player--tomato:hover .chats-player--face > img{
-    border-color: tomato;
+.chat-text__div:nth-child(2) .chat-text__div--text--content{
+    margin-top: 25px;
+    border-radius: 10px;
+    border-top-right-radius: 0px;
+    background-color: var(--yellow);
 }
-.leave{
-    opacity: .5;
+.chat-text--date{
+    height: 3vh;
+    width: 98vw;
+    display: flex;
+    justify-content: center;
 }
-.chats-player--mention{
-    margin-top: 8px;
-    font-size: small;
+.chat-text--date--calender{
+    background-color: var(--gray);
+    height: 2.5vh;
+    width: 60vw;
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
     font-weight: 400;
+    font-size:medium;
 }
-.fa-gear:hover{
-    animation: gear-turn 1s linear infinite;
-    color: var(--yellow);
-}
-.fa-music:hover,
-.fa-user-plus:hover,
-.fa-magnifying-glass:hover{
-    color: var(--yellow);
-}
-@keyframes gear-turn {
-    from{
-        transform: rotateZ(0);
-    }   
-    to{
-        transform: rotateZ(360deg);
-    } 
+.chat-text--date--calender > i{
+    margin-right: 8px;
 }
