--- a/css/screens/lauri-chat.css
+++ b/css/screens/lauri-chat.css
@@ -114,8 +114,13 @@
 }
 .chat-text__div:nth-child(2){
     flex-direction: row-reverse;
-}
+    animation: showUp 1s ease-in-out forwards;
 
+}
+.chat-text__div:nth-child(3) {
+    animation: showUp 1s ease-in-out forwards;
+    animation-delay: .5s;
+}
 .chat-text__div:nth-child(2) .chat-text__div--text--content{
     margin-top: 25px;
     border-radius: 10px;
